Actions
Bug #13773
closedzs: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Build errors on SPARC:
../../sun/io/zs_async.c:462:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] 462 | (int (*)())zsa_rsrv, | ^ ../../sun/io/zs_async.c:471:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] 471 | (int (*)())zsa_wput, | ^ cc1: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2696d28bdff8fd7efcfc04100ee084df09358c52
commit 2696d28bdff8fd7efcfc04100ee084df09358c52 Author: Toomas Soome <tsoome@me.com> Date: 2021-05-10T15:16:49.000Z 13773 zs: cast between incompatible function types Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Andy Fiddaman <andy@omnios.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions