13773 zs: cast between incompatible function types Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Andy Fiddaman <andy@omnios.org> Approved by: Dan McDonald <danmcd@joyent.com>